tests/e2e/glance/network-policy/03-patch-disable-networkpolicy.yaml
# SPDX-FileCopyrightText: Copyright 2026 SAP SE or an SAP affiliate company
#
# SPDX-License-Identifier: Apache-2.0

# Patch: unset spec.networkPolicy so the operator deletes the NetworkPolicy.
apiVersion: glance.openstack.c5c3.io/v1alpha1
kind: Glance
metadata:
  name: glance-netpol
  namespace: openstack
spec:
  networkPolicy: null
